# hermes-pmxt

./: LEARNINGS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  workflow.yml
examples/: demo.py
hermes_pmxt/: __init__.py  config.py  exchanges.py  registry.py  shaper.py  tools.py
skill/: SKILL.md
tests/: conftest.py  test_exchanges.py  test_tools.py
